array key typing; array types declaration; internal storage of int changed to Integer
git-svn-id: https://svn.ci.uchicago.edu/svn/vdl2/trunk@4835 e2bb083e-7f23-0410-b3a8-8253ac9ef6d8